Update to the newest version(18/6/2023)

--- a/webpage_blog/index.html
+++ b/webpage_blog/index.html
@@ -31,7 +31,7 @@
 
 				<h1>Ringtonus's Blog</h1>
 
-					<a id="header_1" href="../webpage_server/main.html" class="headHyperlink" target="_blank">首页</a>
+					<a id="header_1" href="../index.html" class="headHyperlink" target="_blank">首页</a>
 					<a href="index.html" class="headHyperlink">博客</a>
 					<a href="../webpage_forum/" class="headHyperlink" target="_blank">论坛</a>
 					<a href="../webpage_common/sendMessage.html" class="headHyperlink" target="_blank">留言</a>
@@ -43,11 +43,8 @@
 			<div class="main">
 				<div class="profile">
 					<p class="photo"><img src="../Images/blog/Ringtonus.jpg" alt="PHOTO" width="40%" height="40%" style="border-radius: 50% 50% 50% 50%;"></p>
-					<br>
-					<p>Ringtonus</p>
-					<br>
+					<h2>Ringtonus   </h2>
 					<p>废物一枚，于学不精，前端半吊子，后端根本说不上会</p>
-					<br>
 					<p>“PHP”到底还行不行啊？</p>
 				</div>
 				
@@ -59,6 +56,29 @@
 
 
 					<div class="texts">
+
+
+						<div class="arrow">
+							<a href='../webpage_common/web_intro.html' class="logs" style="background-color: rgb(216, 33, 33)">
+								<h5>请先查看网站说明！(可点我)</h5>
+								<p class="date">---</p>
+							</a>
+						</div>
+
+						<div class="arrow">
+							<a href='https://www.edenland.top' class="logs">
+								<h5>服务器迁移到了香港指点云，并实装了新域名和SSL证书</h5>
+								<p class="date">2023/6/9</p>
+							</a>
+						</div>
+
+						<div class="arrow">
+							<a target='_blank' href="https://github.com/Nanftari/Web" class="logs">
+								<h5>服务器网页已开源至Github，点此前往</h5>
+								<p class="date">2023/5/21</p>
+							</a>
+						</div>
+
 
 
 						<!--<div class="arrow">
