--- a/webpage_server/Old/contact.html
+++ b/webpage_server/Old/contact.html
@@ -5,6 +5,7 @@
 		<title>Links</title>
 		<link rel="icon" href="../../Images/icon/pig.ico">
 		<link rel="stylesheet" type="text/css" href="../../CSS/button1.css">
+		<script type="text/javascript" src="text_load.js"></script>
 	</head>
 	<body>
 		<h1 style="font-size:500%;color:black;text-align:center"><b>联系方式</b></h1>
