--- a/webpage_server/Old/index.html
+++ b/webpage_server/Old/index.html
@@ -23,7 +23,7 @@
 
 		<p style="text-align:center"><a href="../../Videos/rickroll.mp4"><button class="index_button_rickroll"><span>无条件申请服务器管理员资格！</span></button></a></p>
 
-		<p style="text-align:center"><a href="http://182.61.28.58:8123" target="_blank"><button
+		<p style="text-align:center"><a href="http://www.edenland.top:8123" target="_blank"><button
 					class="index_button"><span>服务器卫星地图</span><br>Satellite map</a></button></p>
 
 		<p style="text-align:center"><a href="introduction.html"><button
@@ -34,8 +34,8 @@
 					us</button></a></p>
 		<p style="text-align:center"><a href="rules.html"><button
 					class="index_button"><span>服务器规则</span><br>Rules</button></a></p>
-		<p style="text-align:center"><a href="contact.html"><button class="index_button"><span>联系方式</span><br>Contact
-					us</button></a></p>
+		<!--<p style="text-align:center"><a href="contact.html"><button class="index_button"><span>联系方式</span><br>Contact
+					us</button></a></p>-->
 		<hr />
 		<h3 style="color:blue;text-align:center"><a href="../main.php">访问新版网页</a></h3>
 
