--- a/webpage_common/sendMessage.html
+++ b/webpage_common/sendMessage.html
@@ -7,33 +7,46 @@
 		<link rel="stylesheet" href="../CSS/external/water.css">
 	</head>
 	<body>
-		<h1 style="font-size:500%;text-align:center">博客留言</h1>
+		<h1 id='message_0' class='scriptum' style="font-size:500%;text-align:center">博客留言</h1>
+
+		<div id="languageList" class="languageList">
+			<a onclick="refreshText('简体中文');" class="languages">简体中文</a><br>
+			<a onclick="refreshText('正體中文');" class="languages">正體中文</a><br>
+			<a onclick="refreshText('English');" class="languages">English</a><br>
+		</div>
+		<style>
+			.languageList {
+				position: absolute;
+			}
+		</style>
+
+		<p id='feedback_1' class='scriptum' style="text-align:center"><a href='../webpage_blog/index.html'><button class='button1'><span>返回</span><br>Back</button></a>
+
+
 		<hr />
 
 		<form action="sendMessage.php" method="post">
 		
 		
-	<label for="ID">您的邮箱<!--或Minecraft ID--></label>
+	<label id='message_1' class='scriptum' for="ID">您的邮箱<!--或Minecraft ID--></label>
 	<input type="text" id="ID" name="name">
 	
 	<br>
 		
 		
-	<label for="text">留言内容</label>
+	<label id='message_2' class='scriptum' for="text">留言内容</label>
 	<textarea type="text" id="text" name="feedback"></textarea>
 	
 	<br>
 	
-	<label style="color:red;">
-		<input type="checkbox" name="terms">
-		我已阅读并遵守<a href="web_intro.html">网站说明</a>
+	<label style="color:red;" id='message_3' class='scriptum'><input type='checkbox' name='terms'>我已阅读并遵守<a href='web_intro.html'>网站说明</a>
 	</label>
 	
 	<br>
 	
 	<br>
 	
-	<button onclick="alert('提交完成!')"><p>提交反馈</p></button>
+	<button onclick="alert('OK!')"><p id='message_4' class='scriptum'>提交</p></button>
 	
 	
 	</form>
