--- a/webpage_server/Old/donate.html
+++ b/webpage_server/Old/donate.html
@@ -6,81 +6,43 @@
 		<link rel="icon" href="../../Images/icon/pig.ico">
 		<link rel="stylesheet" type="text/css" href="../../CSS/button1.css">
 		<link rel="stylesheet" type="text/css" href="../../CSS/button2.css">
+		<script type="text/javascript" src="text_load.js"></script>
 	</head>
 	<body onload="func0();">
 
-
-
-		<script type="text/javascript">
-			function func0() {
-				/*this function will run automatically after the page is loaded*/
-				document.getElementById("list").style.display = "none";
-				document.getElementById("hide_button").style.display = "none";
-			}
-
-			/*these two function can switch the button2(actually it's two buttons)*/
-			function func2() {
-				document.getElementById("list").style.display = "none";
-				document.getElementById("show_button").style.display = "inline";
-				document.getElementById("hide_button").style.display = "none";
-			}
-
-			function func1() {
-				document.getElementById("list").style.display = "inline";
-				document.getElementById("show_button").style.display = "none";
-				document.getElementById("hide_button").style.display = "inline";
-			}
-
-
-			/*this function can switch the image when you click it*/
-			function img() {
-
-				element2 = document.getElementById("tips")
-				element1 = document.getElementById("payment")
-				if (element1.src.match("wechat")) {
-					element1.src = "../../Images/payment/alipay.jpg";
-					element2.innerHTML = "*当前支付方式：支付宝，点击图片以切换";
-				} else {
-					element1.src = "../../Images/payment/wechat.jpg";
-					element2.innerHTML = "*当前支付方式：微信，点击图片以切换";
-				}
-
-			}
-		</script>
-
-
-
-
-
-		<h1 style="font-size:500%;color:black;text-align:center"><b>自愿赞助</b></h1>
+		<h1 id="donate_1" class="scriptum" style="font-size:300%;color:black;text-family:courier;text-align:center"><b>自愿赞助</b></h1>
 		<p>ㅤ</p>
-		<p style="text-align:center"><a href="index.html"><button class="button1"><span>首页</span><br>Menu</button></a>
+		<p style="text-align:center"><a href="index.html"><button class="button1"><span>返回</span><br>Back</button></a>
 		</p>
 		<hr />
-		<h2 style="font-size:175%;text-align:left">
+		<h3 id="donate_2" class="scriptum" style="text-align:center">
 			本服务器为公益服，永久免费，但玩家可以选择自愿赞助服务器<br>
 			自愿资助的玩家将被列入服务器赞助者名单，玩家可选择匿名<br>
 			赞助资金单次最大不得超过50元，且一周最多只能赞助2次<br>
-		</h2>
-
-		<p style="text-align:center;font-size:150%"> 捐助渠道：<br>
+			<!-- 赞助资金会转换成玩家的赞助值，1赞助值=1人民币，赞助值可用于购买封邦头衔<br>
+			如有特殊情况，可向服主申请退款，退款后，其金额对应的赞助值和用赞助值兑换的封邦和头衔将立即宣布无效<br>
+			<a href="get_title.html">关于通过赞助获得封邦/头衔的详细规则，请点击这里</a> -->
+		</h3>
+		
+		<p id="donate_3" class="scriptum" style="text-align:center;"> 捐助渠道：<br>
 			QQ：1635675769<br>
 			微信：Y1635675769Y<br>
 			支付宝：15989566069<br>
 		</p>
+		
+		<p id="donate_4" class="scriptum" style="text-align:center;"><i id="tips">*支付方式：微信（左）| 支付宝（右）</i></p>
+		<p class="scriptum" style="text-align:center">
+			<img loading="lazy" src="../../images/payment/wechat.jpg" alt="pay" width="256"
+			height="256" >
+			<img loading="lazy" src="../../images/payment/alipay.jpg" alt="pay" width="256"
+			height="256" >
+		</p>
+	
 
-		<p style="text-align:center;font-size:111%"><i id="tips">*当前支付方式：微信，点击图片以切换</i></p>
-		<p style="text-align:center"><img loading="lazy" src="../../Images/payment/wechat.jpg" alt="pay" width="256"
-			height="256" id="payment" onclick="img()"></p>
-
-
-		<p style="text-align: center;"><button type="button" class="button2" id="show_button"
-				onclick="func1()">显示赞助列表</button></p>
-		<p style="text-align: center;"><button type="button" class="button2" id="hide_button"
-				onclick="func2()">隐藏赞助列表</button></p>
-		<p style="font-size:125%;text-align:center;" id="list">暂无</p>
-
+		
 		<hr />
+		
+		<p style="text-align: center;"><a id="donate_6" class="scriptum" href="../../Documents/money.txt" target="_blank">查看服务器资金记录</a></p>
 
 
 
