--- a/webpage_server/Old/introduction.html
+++ b/webpage_server/Old/introduction.html
@@ -5,44 +5,51 @@
 		<title>Introduction -The Edenland</title>
 		<link rel="icon" href="../../Images/icon/pig.ico">
 		<link rel="stylesheet" type="text/css" href="../../CSS/button1.css">
+		<script type="text/javascript" src="text_load.js"></script>
 	</head>
 	<body>
-		<h1 style="font-size:500%;color:black;text-align:center"><b>服务器简介</b></h1>
+		<h1 id="intro_0" class="scriptum" style="font-size:500%;color:black;text-family:courier;text-align:center"><b>服务器简介</b></h1>
 		<p>ㅤ</p>
 		<p style="text-align:center"><a href="index.html"><button class="button1"><span>返回</span><br>Back</button></a>
 		</p>
 		<hr />
-
-		<h2>本服务器基于百度智能云</h2>
-		<p>
+		
+		<h3 id="intro_1" class="scriptum">本服务器基于百度智能云</h3>
+		<p id="intro_2" class="scriptum">
 			配置：Xeon Gold 6271C 1C2T，4GB DDR4，6Mbps<br>
-			版本及服务端：1.19.4 Purpur<br>
+			版本及服务端：1.19.3 Purpur<br>
 			使用插件：Spark，FartherViewDistance，Geyser，GeyserHacks，eBackup，LaggRemover，Dynmap，Via三件套，轻量自动公告，SkinRestorer，BlessingSkinSync,ProtocalLib,AuthMeReloaded<br>
 		</p>
-
-		<h2>改动：</h2>
-		<p>
+		
+		<h3 id="intro_3" class="scriptum">改动：</h3>
+		<p id="intro_4" class="scriptum">
 			1.怪物生成半径变为一半。<br>
 			2.生物生成最大数降低。<br>
 			3.可以骑某些生物。<br>
 			4.世界边界为8192格。<br>
-			5.自动公告插件会发出骂Bugjump的公告。<br>
+			5.DeepDark及古城生成概率缩小至¼。<br>
+			6.自动公告插件会发出骂Bugjump的公告。<br>
 		</p>
-
-		<h2>服务器玩法：</h2>
+		
+		<h3 id="intro_5" class="scriptum">服务器玩法：</h3>
 		<p>
-			本服务器为极限模式，纯净生存，原版玩法，可生电，允许离线模式玩家登录。<br>
-			虽然是极限模式，但满足一定条件的玩家可以复活，详情请看<a href="rules.html">服务器规则</a>。<br>
-			因为本服务器为离线模式，所以为了防止有人冒用其他玩家的ID，特意安装了AuthMe插件，关于如何使用该插件，请见<a href="rules.html">服务器规则</a>。<br>
-			服务器为公益服，唯一收入来源为服务器玩家自愿非义务性赞助<a href="donate.html">---赞助我们</a>。<br>
-			本服务器已安装Mineskin和BlessingSkin两个皮肤站所对应的插件，有需要使用皮肤的玩家可自行到相应皮肤站上传皮肤。<br>
+			<span id="intro_5_1" class="scriptum">本服务器为极限模式，纯净生存，原版玩法，可生电，允许离线模式玩家登录。</span><br>
+			<span id="intro_5_2" class="scriptum">虽然是极限模式，但满足一定条件的玩家可以复活，详情请看</span>
+			<a id="intro_5_3" class="scriptum" href="rules.html">服务器规则</a>。<br>
+			<span id="intro_5_4" class="scriptum">因为本服务器为离线模式，所以为了防止有人冒用其他玩家的ID，特意安装了AuthMe插件，关于如何使用该插件，请见</span>
+			<a id="intro_5_5" class="scriptum" href="rules.html">服务器规则</a>。<br>
+			<span id="intro_5_6" class="scriptum">服务器为公益服，唯一收入来源为服务器玩家自愿非义务性赞助</span>
+			<a id="intro_5_7" class="scriptum" href="donate.html">---赞助我们</a>。<br>
+			<span id="intro_5_8" class="scriptum">本服务器已安装Mineskin和BlessingSkin两个皮肤站所对应的插件，有需要使用皮肤的玩家可自行到相应皮肤站上传皮肤。</span><br>
+			<a id="intro_5_9" class="scriptum" href="../../Documents/locations.xlsx">服务器重要地点表格</a>
 		</p>
 		<hr />
-
-
-		<style>
-
-		</style>
+		
+		<h4>
+			<span id="intro_6_1" class="scriptum">服务器存档于2018年8月31日创建，创建版本为1.8.1，点击以下载</span>
+			<a id="intro_6_2" class="scriptum" href="../../Documents/versions.xlsx">版本历史</a>
+			<span id="intro_6_3" class="scriptum">记录表格。</span>
+		</h4>
 
 
 
