--- a/webpage_server/Old/rules.html
+++ b/webpage_server/Old/rules.html
@@ -5,57 +5,47 @@
 		<title>Rules -The Edenland</title>
 		<link rel="icon" href="../../Images/icon/pig.ico">
 		<link rel="stylesheet" type="text/css" href="../../CSS/button1.css">
+		<script type="text/javascript" src="text_load.js"></script>
 	</head>
 
 
 	<body>
 
-		<h1 style="font-size:500%;text-align:center">服务器规则</h1>
+		<h1 id='rules_1' class='scriptum' style="font-size:300%;text-align:center">服务器规则</h1>
+		<p>ㅤ</p>
 		<p style="text-align:center"><a href="index.html"><button class="button1"><span>返回</span><br>Back</button></a>
 		</p>
-
 		<hr />
-
-		<h2>服务器一般规则：</h2>
-
-		<p class="text">
+		
+		<h3 id='rules_2' class='scriptum'>服务器一般规则：</h3>
+		
+		<p id='rules_3' class='scriptum'>
 			1.禁止恶意发言，攻击他人。<br>
 			2.禁止恶意使用打火石，高频红石，卡服机，活塞，TNT等。<br>
-			3.禁止键政。<br>
-			4.禁止搞黄色。<br>
+			3.禁止传播或讨论任何违法违政信息。<br>
+			4.禁止传播淫秽不良信息。<br>
 			5.禁止刷屏。<br>
-			6.外挂方面：允许矿透、自动瞄准、自动攻击、快速切换、范围自动攻击、连点，但以上操作不能针对玩家，否则视为违规；其余的外挂操作(飞行、高速移动、锁血等)一律禁止。<br>
+			6.外挂方面：允许矿透、自动瞄准、自动攻击、快速切换、范围自动攻击、连点，但以上操作不能针对玩家，否则视为违规；其余的外挂操作(如非法飞行、非法高速移动、锁血等)一律禁止。<br>
 			7.所有的玩家都必须登录以正常游戏，输入/register (密码) (密码) 以注册，输入/login (密码) 以登录，玩家不可将密码泄露给他人，且不要试图绑定邮箱(邮箱功能仍处于测试阶段)，若忘记密码，请联系服主。<br>
-			8.未登录的玩家，背包栏会被临时性清空(登录后将会恢复)，所有未登录的玩家都有256格的活动半径，但不可与任何方块、实体等交互。<br>
+			8.未登录的玩家，背包栏会被临时性清空(登录后将会恢复)，所有未登录的玩家不可活动，不可与任何方块、实体等交互，登陆失败将会被自动踢出，屡次失败将导致封禁。<br>
 		</p>
-
-
-
-		<h2>死亡复活和惩罚规则：</h2>
-		<p class="text">
+		
+		
+		
+		<h3 id='rules_4' class='scriptum'>死亡复活和惩罚规则：</h3>
+		<p id='rules_5' class='scriptum'>
 			因为本服为极限模式，玩家死后不能复活，但由于本服玩家较少，为防止玩家流失并增进游戏体验，本服会根据综合情况进行如下处理：<br>
 			<br>
 			①如果玩家因为任意非正常原因(例如卡bug、别的玩家误伤等)导致死亡，则不会受到任何惩罚，并进行回档，成就统计不变。<br>
 			②如果玩家因为正常原因死亡，可向服主申请复活，但玩家需要销毁八个不死图腾和自己身上任意两件装备(包括盔甲、打火石、剑、弓弩、盾、三叉戟及鞘翅)，未满足需求则不可被复活。复活后，生命值上限将会被永久-2（可累计，因此最多复活9次）。<br>
 			注：仅服主或副服主有复活玩家的权力。（注：服主可能会在复活时随机给予一些微小的惩罚）
 		</p>
-
+		
 		<hr />
-
-		<p style="font-size:250%;text-align:center"><b>
-				请各位玩家玩家遵守规则，若有异议或补充，请向服主反馈，发现有人违规，请向服主汇报，谢谢！
-			</b></p>
-
-		<style>
-			h2 {
-				text-align: center;
-				font-size: 300%;
-			}
-
-			.text {
-				font-size: 125%;
-			}
-		</style>
+		
+		<p  id='rules_6' class='scriptum' style="text-align:center">
+			<b>请各位玩家玩家遵守规则，若有异议或补充，请向服主反馈，发现有人违规，请向服主汇报，谢谢！</b>
+		</p>
 
 	</body>
 </html>
