--- a/webpage_server/sidebar.html
+++ b/webpage_server/sidebar.html
@@ -2,61 +2,62 @@
 		<button id="mySidebar" class="sidebar" ondblclick="controllNav(), changeSidebar()">
 
 
-            <p>&thinsp;	</p>
+            <p class="thinsp">&thinsp;	</p>
+			<a id="closeSidebarIcon" onclick="controllNav();changeSidebar()">×</a>
 
 
-			<p class="pig"><a href="../webpage_blog/index.html"><img src="../Images/index/pig.jpg" alt="LOGO"
-						width="40%" height="40%" style="border-radius: 50% 50% 50% 50%;"></a></p>
+			<p class="thinsp pig"><a href="../webpage_blog/index.html"><img src="../Images/index/pig.jpg" alt="LOGO"
+					 style="border-radius: 50% 50% 50% 50%;"></a></p>
 
-            <p>&thinsp;	</p>
+            <p class="thinsp">&thinsp;	</p>
             
 
-			<hr />
+			<hr class="thinsp" />
 
-			<p style="text-align:center"><a href="../Videos/rickroll.mp4" class="mainlinks" target="_blank">
+			<!--<p style="text-align:center"><a href="../Videos/rickroll.mp4" class="mainlinks" target="_blank">
 					<p class="index_button"><span id="sidebar_text_1" class="scriptum">点我送管理员</span></p>
-				</a></p>
+				</a></p>-->
 
-			<p style="text-align:center"><a href="http://182.61.28.58:8123" target="_blank" class="mainlinks">
-					<p class="index_button"><span id="sidebar_text_2" class="scriptum">卫星地图</span></p>
+			<p style="text-align:center"><a href="http://www.edenland.top:8123" target="_blank" class="mainlinks">
+					<p class="index_button"><span class='icon'>🗺️</span><span id="sidebar_text_2" class="sidebarText scriptum">卫星地图</span></p>
 				</a></p>
 
 			<p style="text-align:center"><a href="introduction.php" class="mainlinks">
-					<p class="index_button"><span id="sidebar_text_3" class="scriptum">服务器介绍</span></p>
+					<p class="index_button"><span class='icon'>📙</span><span id="sidebar_text_3" class="sidebarText scriptum">服务器介绍</span></p>
 				</a></p>
 
 			<p style="text-align:center"><a href="join.php" class="mainlinks">
-					<p class="index_button"><span id="sidebar_text_4" class="scriptum">加入我们</span></p>
+					<p class="index_button"><span class='icon'>🚪</span><span id="sidebar_text_4" class="sidebarText scriptum">加入我们</span></p>
 				</a></p>
 
 			<p style="text-align:center"><a href="donate.php" class="mainlinks">
-					<p class="index_button"><span id="sidebar_text_5" class="scriptum">赞助我们</span></p>
+					<p class="index_button"><span class='icon'>💲</span><span id="sidebar_text_5" class="sidebarText scriptum">赞助我们</span></p>
 				</a></p>
 
 			<!-- <p style="text-align:center"><a href="vassals.html" class="mainlinks" target="_blank">
 		<button class="index_button"><span>封邦头衔一览(bushi)</span><br>Vassals and titles</p></a></p> -->
 
 			<p style="text-align:center"><a href="rules.php" class="mainlinks">
-					<p class="index_button"><span id="sidebar_text_6" class="scriptum">服务器规则</span></p>
+					<p class="index_button"><span class='icon'>📄</span><span id="sidebar_text_6" class="sidebarText scriptum">服务器规则</span></p>
 				</a></p>
 
 			<!--<p style="text-align:center"><a href="links.html" class="mainlinks" target="_blank">
 		<p class="index_button"><span>外部链接</span></p></a></p>-->
 
 		    <p style="text-align:center"><a href="files.php" class="mainlinks">
-			    <p class="index_button"><span id="sidebar_text_7" class="scriptum">公共文件（404）</span></p>
+			    <p class="index_button"><span class='icon'>📂</span><span id="sidebar_text_7" class="sidebarText scriptum">公共文件（404）</span></p>
 		    </a></p>
 
 			<p style="text-align:center"><a href="gallery.php" class="mainlinks">
-				<p class="index_button"><span id="sidebar_text_8" class="scriptum">画廊（404）</span></p>
+				<p class="index_button"><span class='icon'>📷</span><span id="sidebar_text_8" class="sidebarText scriptum">画廊（404）</span></p>
 			</a></p>
 
 			<p style="text-align:center"><a href="../webpage_common/web_intro.html" class="mainlinks">
-				<p class="index_button"><span id="sidebar_text_9" class="scriptum">关于本站</span></p>
+				<p class="index_button"><span class='icon'>❔</span><span id="sidebar_text_9" class="sidebarText scriptum">关于本站</span></p>
 			</a></p>
 
-		    <p style="text-align:center"><a href="../webpage_common/feedback.html" class="mainlinks">
-				<p class="index_button"><span id="sidebar_text_10" class="scriptum">反馈</span></p>
+		    <p style="text-align:center"><a href="../webpage_common/feedback.html" target="_blank" class="mainlinks">
+				<p class="index_button"><span class='icon'>📧</span><span id="sidebar_text_10" class="sidebarText scriptum">反馈</span></p>
 			</a></p>
 
 
@@ -70,3 +71,5 @@
 
 
 		</button>
+<!-- 这个不属于侧边栏，但是与侧边栏有关，是竖屏模式下打开侧边栏用于遮挡其他部分内容的半透明阴影 -->
+<div id='sidebarShadow' onclick="controllNav();changeSidebar()"></div>
